Added styling for search by institution

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -112,3 +112,10 @@ a img {
 #search {
     text-align: center;
 }
+
+.radio-tabs-tabs label {
+  margin-right: 1em;
+}
+.radio-tabs-tabs {
+  margin-bottom: 1em;
+}
