Changed signed_undertaking field to confirmed_acspri_membership, which is a more accurate representation of the meaning

--- a/app/views/admin/users/_search_results.html.erb
+++ b/app/views/admin/users/_search_results.html.erb
@@ -9,7 +9,7 @@
       <th>Type of work</th>
       <th>Position</th>
       <th>Date registered</th>
-      <th>Signed undertaking?</th>
+      <th>Confirmed ACSPRI member?</th>
       <th>Title</th>
       <th>First name</th>
       <th>Surname</th>
@@ -26,7 +26,7 @@
         <td><%= user.action %></td>
         <td><%= user.position %></td>
         <td><%= user.dateregistered %></td>
-        <td><%= signed_undertaking_to_s(user.signed_undertaking) %></td>
+        <td><%= confirmed_acspri_member_to_s(user.confirmed_acspri_member) %></td>
         <td><%= user.title %></td>
         <td><%= user.fname %></td>
         <td><%= user.sname %></td>
