--- a/app/views/admin/users/_user_details_table.html.erb
+++ b/app/views/admin/users/_user_details_table.html.erb
@@ -3,7 +3,7 @@
   <tr><td>Username:</td><td><%= @user.user %></td></tr>
   <tr><td>Email address:</td><td><%= @user.email %></td></tr>
   <tr><td>Affiliation:</td><td><%= @user.affiliation %> <%= @user.country ? "(#{@user.country.Countryname})" : '' %></td></tr>
-  <tr><td>ACSPRI member?</td><td><%= bool_to_s(@user.acsprimember) %></td></tr>
+  <tr><td>Institution is ACSPRI member?</td><td><%= bool_to_s(@user.institution_is_acspri_member) %></td></tr>
   <tr><td>Type of work:</td><td><%= @user.action %></td></tr>
   <tr><td>Member since:</td><td><%= Time.parse(@user.dateregistered).strftime("%e %b %Y") %>  (<%= time_ago_in_words(@user.dateregistered) %>)</td></tr>
   <tr><td>Last access:</td><td><%= @user.last_access_time ? time_ago_in_words(@user.last_access_time)+" ago" : "Never" %></td></tr>
@@ -19,13 +19,13 @@
   </tr>
   <tr><td>Position:</td><td><%= @user.position_s %></td></tr>
 
-  <tr id="signed_undertaking">
-    <td>Signed undertaking?</td>
+  <tr id="confirmed_acspri_member">
+    <td>Confirmed ACSPRI member?</td>
     <td>
       <%= form_for [:admin, @user] do |form| %>
-        <%= signed_undertaking_to_s(@user.signed_undertaking) %>
-        <%= form.hidden_field :signed_undertaking, :value => (1-@user.signed_undertaking).abs %>
-        <%= form.submit @user.signed_undertaking? ? "Revoke access" : "Grant access" %>
+        <%= confirmed_acspri_member_to_s(@user.confirmed_acspri_member) %>
+        <%= form.hidden_field :confirmed_acspri_member, :value => (1-@user.confirmed_acspri_member).abs %>
+        <%= form.submit @user.confirmed_acspri_member? ? "Revoke membership" : "Confirm membership" %>
       <% end %>
     </td>
   </tr>
