--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,46 +1,5 @@
-body {
-    font: 11px/16px Arial, Helvetica, sans-serif;
-}
-
-.navigation ul {
-    display: inline-block;
-    list-style: none;
-    padding: 0;
-    margin-bottom: 1em;
-}
-
-.navigation li {
-    float: left;
-    padding: 5px;
-    border: 1px solid gray;
-    background-color: #ccc;
-    margin-right: 1em;
-}
-
-#main {
-    clear: both;
-    margin: 2em 0;
-}
-
-#header {
-    border-bottom: 2px solid #6678b1;
-}
-#title {
-    font-size: 32px;
-    color: #039;
-    padding: 0.5em 0.5em 0.5em 0;
-}
-#subtitle {
-    padding: 0 0 0.5em 0;
-    font-size: 22px;
-    color: #039;
-}
-#links {
-    text-align: center;
-}
-
-#account {
-    float: right;
+article {
+    padding-left: 40px;
 }
 
 #flash_notice {
