Added test for general, non-acspri undertaking form emails, fixed defects

--- a/app/views/undertaking_mailer/_signature.html.erb
+++ b/app/views/undertaking_mailer/_signature.html.erb
@@ -6,5 +6,5 @@
   Acton, ACT 0200 Australia<br />
   Telephone 61 2 6125 4400<br />
   Fax 61 2 6125 0627<br />
-  Website: <%= link_to root_url %><br />
+  Website: <%= link_to nil, root_url %><br />
 </p>
