Undertaking forms now depend on the user's institution ACSPRI membership instead of whether the user has been confirmed as an ACSPRI member (incorrect)

--- a/app/views/undertaking_mailer/confirm_to_admin_email.html.erb
+++ b/app/views/undertaking_mailer/confirm_to_admin_email.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    General Undertaking form (<%= @undertaking.user.confirmed_acspri_member? ? "ACSPRI" : "Non-ACSPRI" %>) signed by <%= @undertaking.user.user %><br />
+    General Undertaking form (<%= @undertaking.user.institution_is_acspri_member ? "ACSPRI" : "Non-ACSPRI" %>) signed by <%= @undertaking.user.user %><br />
     <br />
     The following datasets have been requested:<br />
     <br />
