--- a/app/views/undertakings/_agreement_general.html.erb
+++ b/app/views/undertakings/_agreement_general.html.erb
@@ -12,7 +12,7 @@
   I also consent to my name and institutional affiliation being provided to the data owners so they may collect information about the usage of their data and
  make contact with colleagues with similar interests.<br/>
 
-  <% unless undertaking.user.confirmed_acspri_member? %>
+  <% unless undertaking.user.institution_is_acspri_member %>
     <br/>
     I also undertake to meet the relevant charges for the materials.
   <% end %>
