Minor refactoring, added StatementEjb model for restricted undertaking form dataset categories

--- a/app/views/undertakings/new.html.erb
+++ b/app/views/undertakings/new.html.erb
@@ -1,13 +1,18 @@
-<p>Apply for access to download unrestricted data.</p>
-<p>User registration, completion of a description of intended use and agreement to an undertaking will give you access to download your choice of unrestricted data.</p>
+<p>Apply for access to download <%= "un" unless @undertaking.is_restricted %>restricted data.</p>
+
+<% if @undertaking.is_restricted %>
+  <p>Agree to the Restricted Access Undertaking for access to download restricted data. If unrestricted data are required go to straight to the <%= link_to "general undertaking form", new_user_undertaking_path(@user, :is_restricted => 0) %>.</p>
+<% else %>
+  <p>User registration, completion of a description of intended use and agreement to an undertaking will give you access to download your choice of unrestricted data.</p>
+<% end %>
 
 <% unless current_user.institution_is_acspri_member %>
-  <p><strong>You will be charged $1,000 per dataset</strong></p>
+  <p><strong>You will be charged $1,000 per dataset.</strong></p>
 <% end %>
 
 <%= semantic_form_for [@user, @undertaking] do |form| %>
   <%= form.inputs do %>
-    <%= form.input :is_restricted, :as => :hidden, :input_html => {:value => 0} %>
+    <%= form.input :is_restricted, :as => :hidden %>
     <%= form.input :datasets, :collection => datasets_to_collection(@datasets), :input_html => {:class => 'filterable'}, :hint => "Please select the datasets that you require: (Use the command or control key to select multiple datasets)" %>
 
     <%= form.input :intended_use_type, :as => :check_boxes, :collection => Undertaking.intended_use_options.invert, :label => "Intended use of data:", :hint => "Tick all that apply" %>
