--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,18 +1,15 @@
+section.main {
+    padding-left: 0;
+}
+
 article {
     padding-left: 40px;
 }
 
-#flash_notice {
+#flash_notice, #flash_alert {
     padding: 5px;
-    border: 1px solid gray;
-    background-color: yellow;
-    margin: 1em 0;
-}
-
-#flash_alert {
-    padding: 5px;
-    border: 1px solid gray;
-    background-color: red;
+    border: 1px solid #1F5E2F;
+    background-color: #F1F1F1;
     margin: 1em 0;
 }
 
@@ -40,9 +37,37 @@ form.formtastic fieldset ol li.radio fieldset ol li {
     padding-right: 2em;
 }
 
-form.formtastic .select-filter-container {
-  padding-left: 25%;
+form.formtastic fieldset > ol > li label {
+    float: none;
 }
+form.formtastic fieldset > ol > li fieldset ol {
+    float: none;
+    padding-left: 0;
+}
+
+form.formtastic fieldset > ol > li fieldset legend.label label {
+    float: none;
+}
+
+
+form.formtastic fieldset > ol > li p.inline-hints {
+    margin-left: 0;
+}
+
+form.formtastic fieldset.inputs > ol > li input,
+form.formtastic fieldset.inputs > ol > li select,
+form.formtastic fieldset.inputs > ol > li textarea {
+    width: 40%;
+}
+
+form.formtastic fieldset > ol > li fieldset ol li {
+    list-style-type: none;
+}
+
+form.formtastic fieldset.buttons {
+    padding-left: 0;
+}
+
 
 table {
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
@@ -55,18 +80,14 @@ table {
 th {
     font-size: 14px;
     font-weight: normal;
-    color: #039;
     padding: 10px 8px;
-    border-bottom: 2px solid #6678b1;
+    border-bottom: 2px solid #1F5E2F;
 }
 td {
     border-bottom: 1px solid #ccc;
-    color: #669;
     padding: 6px 8px;
 }
-tbody tr:hover td {
-    color: #009;
-}
+
 
 a img {
     border: none;
