--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -45,8 +45,11 @@ form.formtastic fieldset > ol > li fieldset ol {
     padding-left: 0;
 }
 
-form.formtastic fieldset > ol > li fieldset legend.label label {
-    float: none;
+form.formtastic fieldset > ol > li fieldset legend.label {
+    top: -12px;
+}
+form.formtastic fieldset > ol > li fieldset ol {
+    margin-top: 1em;
 }
 
 
