--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -45,6 +45,9 @@ form.formtastic fieldset > ol > li fieldset ol {
     padding-left: 0;
 }
 
+form.formtastic fieldset > ol > li fieldset {
+    margin-top: 1em;
+}
 form.formtastic fieldset > ol > li fieldset legend.label {
     top: -12px;
 }
@@ -61,6 +64,7 @@ form.formtastic fieldset.inputs > ol > li input,
 form.formtastic fieldset.inputs > ol > li select,
 form.formtastic fieldset.inputs > ol > li textarea {
     width: 40%;
+    max-width: 40%;
 }
 
 form.formtastic fieldset > ol > li fieldset ol li {
