Added user-facing user management emails

--- a/app/views/undertaking_mailer/confirm_to_user_email.html.erb
+++ b/app/views/undertaking_mailer/confirm_to_user_email.html.erb
@@ -17,6 +17,6 @@
     <hr />
     <%= render 'undertakings/agreement_general', :undertaking => @undertaking %>
     <br/>
-    <%= render 'signature' %>
+    <%= render '/email_signature' %>
   </body>
 </html>
