--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -11,3 +11,5 @@ password, and see which type of studies you currently have permission to
 access at <%= edit_user_url(@user) %>.
 
 Thank you for you time.
+
+<%= render '/email_signature' %>
