--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -1,11 +1,12 @@
 <ul>
-  <li>
-    <p>ADA Users</p>
-  </li>
-  <li>
-    <%= link_to "My details", user_path(current_user) if current_user %>
-  </li>
-  <li>
-    <%= link_to "Manage users", admin_users_path if current_user and current_user.admin? %>
-  </li>
+  <li><p>ADA Users</p></li>
+
+  <% if current_user %>
+    <li><%= link_to "My details", user_path(current_user) %></li>
+  <% end %>
+
+  <% if current_user and current_user.admin? %>
+    <li><%= link_to "Manage users", admin_users_path %></li>
+    <li><%= link_to "Manage access requests", admin_undertakings_path %></li>
+  <% end %>
 </ul>
