--- a/app/views/admin/undertakings/index.html.erb
+++ b/app/views/admin/undertakings/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:title) { "Manage access requests" } %>
 
-<table>
+<table class="admin-undertakings">
   <thead>
     <tr>
       <th>Username</th>
@@ -16,14 +16,15 @@
 	<td><%= time_ago_in_words(undertaking.created_at)+undertaking.created_at.strftime(" ago (%d-%m-%Y)") %></td>
       </tr>
 
-      <tr colspan="3">
+    <tr>
+      <td colspan="3">
 	<p class="admin-undertaking-actions">
-	  <%= link_to "Process request", edit_admin_user_path(undertaking.user) %><br />
+	  <%= link_to "Process request", edit_admin_user_path(undertaking.user) %><br /><br />
 	  <%= link_to "Mark as complete", admin_undertaking_mark_complete_path(undertaking, :processed => 1) %>
 	</p>
 
 	<p>
-	  Datasets:<br />
+	  <strong>Datasets:</strong><br />
 	  <ul>
 	    <% undertaking.datasets.each do |dataset| %>
 	      <li><%= dataset.dataset_description %></li>
@@ -32,7 +33,7 @@
 	</p>
 
 	<p class="admin-undertaking-intended-use">
-	  Intended use:<br />
+	  <strong>Intended use:</strong><br />
 	  <ul>
 	    <% undertaking.intended_use_type.each do |iut| %>
 	      <li><%= Undertaking.intended_use_options[iut.to_sym] %></li>
@@ -46,17 +47,18 @@
 	</p>
 
 	<% unless undertaking.email_supervisor.nil? or undertaking.email_supervisor.blank? %>
-	  <p>
-	    Supervisor email:<br />
-	    <%= undertaking.email_supervisor %>
-	  </p>
+	<p>
+	  <strong>Supervisor email:</strong><br />
+	  <%= undertaking.email_supervisor %>
+	</p>
 	<% end %>
 
 	<p>
-	  Funding sources:<br />
+	  <strong>Funding sources:</strong><br />
 	  <%= undertaking.funding_sources %>
 	</p>
-      </tr>
+      </td>
+    </tr>
     <% end %>
   </tbody>
 </table>
