--- a/app/views/undertakings/_agreement_general.html.erb
+++ b/app/views/undertakings/_agreement_general.html.erb
@@ -1,8 +1,8 @@
 <p>
   I HEREBY UNDERTAKE that I will use the data file(s)<br/>
   <br/>
-  <% undertaking.datasets.each do |dataset| %>
-    <%= dataset.dataset_description %><br />
+  <% undertaking.dataset_descriptions.each do |dd| %>
+    <%= dd %><br />
   <% end %>
 </p>
 
