--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -2,8 +2,7 @@
 
 <h2>User details</h2>
 
-<p>TODO: Edit user details (eg. email address)</p>
-
+<p><%= link_to "Edit user details", edit_user_path(@user) %></p>
 <%= render 'user_details_table' %>
 
 <hr />
