Added lightbox for processing access requests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>ADA Users</title>
     <%= stylesheet_link_tag 'formtastic', 'application' %>
-    <%= javascript_include_tag 'jquery', 'rails', 'jquery.select-filter.js', 'jquery.radio-tabs.js', 'application' %>
+    <%= javascript_include_tag 'jquery', 'rails', 'jquery.colorbox-min.js', 'jquery.select-filter.js', 'jquery.radio-tabs.js', 'application' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
