--- a/app/views/layouts/_includes.html.erb
+++ b/app/views/layouts/_includes.html.erb
@@ -1,3 +1,3 @@
-<%= stylesheet_link_tag 'formtastic', 'application' %>
-<%= javascript_include_tag 'jquery', 'rails', 'jquery.select-filter.js', 'jquery.radio-tabs.js', 'application' %>
+<%= stylesheet_link_tag 'formtastic', 'colorbox', 'application' %>
+<%= javascript_include_tag 'jquery', 'rails', 'jquery.colorbox-min.js', 'jquery.select-filter.js', 'jquery.radio-tabs.js', 'application' %>
 <%= csrf_meta_tag %>
