Hide processed access requests by default, with a link to show them

--- a/app/views/admin/undertakings/index.html.erb
+++ b/app/views/admin/undertakings/index.html.erb
@@ -9,6 +9,10 @@
   <% end %>
 </div>
 
+<%= link_to admin_undertakings_path(:show_processed_requests => 1-@show_processed_requests) do %>
+  <%= @show_processed_requests == 1 ? "Hide processed access requests" : "Show processed access requests" %>
+<% end %>
+
 <%= will_paginate @undertakings %>
 
 <table class="admin-undertakings">
