--- a/app/views/admin/undertakings/index.html.erb
+++ b/app/views/admin/undertakings/index.html.erb
@@ -37,7 +37,7 @@
       <td colspan="4">
 	<div>
 	  <p class="admin-undertaking-actions">
-	    <%= link_to "Process request", edit_admin_user_path(undertaking.user) %><br /><br />
+	    <%= link_to "Process request", edit_admin_user_path(undertaking.user), :class => "process-request" %><br /><br />
 	    <% if undertaking.processed %>
 	      <%= link_to "Reopen", admin_undertaking_mark_complete_path(undertaking, :processed => 0) %>
 	    <% else %>
