Most of implementation of reset password via email

--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,15 +1,10 @@
 Dear <%= @user.name || @user.user %>,
 
-Your password has been reset to a new password shown below. Your username
-and new password are:
+Someone (possibly you) requested a password reset for this account. If you'd like to do that,
+please click on the link below and follow the instructions to change your password.
 
-Username: <%= @user.user %>
-Password: <%= @new_password %>
+<%= reset_password_users_url(:token => @user.token_reset_password) %>
 
-You can edit your details (including your email address), change your
-password, and see which type of studies you currently have permission to
-access at <%= edit_user_url(@user) %>.
-
-Thank you for you time.
+If you do not wish to change your password, simply ignore this email.
 
 <%= render '/email_signature' %>
