--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,8 +1,10 @@
-<% content_for(:title) { "Change password" } %>
+<% content_for(:title) { @reset_password ? "Reset your password" : "Change password" } %>
 
 <%= semantic_form_for @user do |f| %>
   <%= f.inputs do %>
-    <%= f.input :password_old, :label => 'Old Password', :input_html => {:value => ''} %>
+    <% unless @reset_password %>
+      <%= f.input :password_old, :label => 'Old Password', :input_html => {:value => ''} %>
+    <% end %>
     <%= f.input :password, :label => 'New Password', :input_html => {:value => ''} %>
     <%= f.input :password_confirmation, :label => 'Re-type New Password', :input_html => {:value => ''} %>
   <% end %>
