--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,5 +1,7 @@
+<% content_for(:title) { "Reset your password" } %>
+
 <p>
-  If you have forgotten your username or password please enter your email address below. Your password will be reset and your new password will be emailed to you.
+  If you have forgotten your username or password please enter your email address below. Instructions to reset your password will be emailed to you.
 </p>
 
 <p>If this email address has changed since you registered please contact the archive at assda@anu.edu.au.</p>
