Finished bulk of implementation of reset password via email. Remaining: authorisation.

--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,8 +1,11 @@
-<% content_for(:title) { @reset_password ? "Reset your password" : "Change password" } %>
+<% content_for(:title) { @token_reset_password ? "Reset your password" : "Change password" } %>
 
 <%= semantic_form_for @user do |f| %>
+  <%= f.semantic_errors %>
   <%= f.inputs do %>
-    <% unless @reset_password %>
+    <% if @token_reset_password %>
+      <%= f.hidden_field :token_reset_password_confirmation, :value => @token_reset_password %>
+    <% else %>
       <%= f.input :password_old, :label => 'Old Password', :input_html => {:value => ''} %>
     <% end %>
     <%= f.input :password, :label => 'New Password', :input_html => {:value => ''} %>
