--- a/app/views/identities/root.html.erb
+++ b/app/views/identities/root.html.erb
@@ -1,11 +1,5 @@
-<html>
-  <head>
-    <meta http-equiv="X-XRDS-Location" content="<%= xrds_idp_url %>" />
-    <link rel="openid.server" href="<%= server_url %>" />
-  </head>
-  <body>
-    <p>
-      This is an OpenID provider base URI.
-    </p>
-  </body>
-</html>
+<% content_for :head_extras do %>
+  <meta http-equiv="X-XRDS-Location" content="<%= xrds_idp_url %>" />
+  <link rel="openid.server" href="<%= server_url %>" />
+<% end %>
+Welcome to the ADA user management system. Please log in or register to continue!
