--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -8,5 +8,6 @@
   <% if current_user and current_user.admin? %>
     <li><%= link_to "Manage users", admin_users_path %></li>
     <li><%= link_to "Manage access requests", admin_undertakings_path %></li>
+    <li><%= link_to "Manage templates", admin_templates_path %></li>
   <% end %>
 </ul>
